@@ -936,19 +936,38 @@ AC_TRY_COMPILE([
 #ifdef HAVE_LASTLOG_H
 #  include <lastlog.h>
 #endif
-#ifdef PATHS_H
+#ifdef HAVE_PATHS_H
 #  include <paths.h>
 #endif
 	],
 	[ char *lastlog = LASTLOG_FILE; ],
 	[ AC_MSG_RESULT(yes) ],
-	[ AC_MSG_RESULT(no)
-	  system_lastlog_path=no ]
+	[
+		AC_MSG_RESULT(no)
+		AC_MSG_CHECKING([if your system defines _PATH_LASTLOG])
+		AC_TRY_COMPILE([
+#include <sys/types.h>
+#include <utmp.h>
+#ifdef HAVE_LASTLOG_H
+#  include <lastlog.h>
+#endif
+#ifdef HAVE_PATHS_H
+#  include <paths.h>
+#endif
+		],
+		[ char *lastlog = _PATH_LASTLOG; ],
+		[ AC_MSG_RESULT(yes) ],
+		[
+			AC_MSG_RESULT(no),
+			system_lastlog_path=no
+		])
+	]
 )
+
 if test -z "$conf_lastlog_location"; then
 	if test x"$system_lastlog_path" = x"no" ; then
 		for f in /var/log/lastlog /usr/adm/lastlog /var/adm/lastlog /etc/security/lastlog ; do
-				if test -e $f ; then
+				if test -d "$f" -o -e "$f" ; then
 					conf_lastlog_location=$f
 				fi
 		done
@@ -968,7 +987,7 @@ AC_MSG_CHECKING([if your system defines UTMP_FILE])
 AC_TRY_COMPILE([
 #include <sys/types.h>
 #include <utmp.h>
-#ifdef PATHS_H
+#ifdef HAVE_PATHS_H
 #  include <paths.h>
 #endif
 	],
@@ -998,7 +1017,7 @@ AC_MSG_CHECKING([if your system defines WTMP_FILE])
 AC_TRY_COMPILE([
 #include <sys/types.h>
 #include <utmp.h>
-#ifdef PATHS_H
+#ifdef HAVE_PATHS_H
 #  include <paths.h>
 #endif
 	],
@@ -1034,7 +1053,7 @@ AC_TRY_COMPILE([
 #ifdef HAVE_UTMPX_H
 #include <utmpx.h>
 #endif
-#ifdef PATHS_H
+#ifdef HAVE_PATHS_H
 #  include <paths.h>
 #endif
 	],
@@ -1059,7 +1078,7 @@ AC_TRY_COMPILE([
 #ifdef HAVE_UTMPX_H
 #include <utmpx.h>
 #endif
-#ifdef PATHS_H
+#ifdef HAVE_PATHS_H
 #  include <paths.h>
 #endif
 	],
