@@ -1,3 +1,6 @@
+20000604
+ - Configure tweaking for new login code on Irix 5.3
+
 20000531
  - Cleanup of auth.c, login.c and fake-*
  - Cleanup of auth-pam.c, save and print "account expired" error messages
